fix jwt tokens provider
